--- a/style.css
+++ b/style.css
@@ -123,3 +123,75 @@ body {
     transform: scale(1);
   }
 }
+
+/* Media Query */
+@media only screen and (max-device-width: 480px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    width: 200px;
+    margin: auto;
+    position: relative;
+    /* transform: scale(1); */
+  }
+
+  .gradient-circle {
+    background: conic-gradient(#877cc7 0%,
+        #bab1ee 40%,
+        #fff 40%,
+        #fff 60%,
+        #d1bd3a 60%,
+        #e9dfa1 100%);
+    height: 220px;
+    width: 220px;
+    position: absolute;
+    z-index: -2;
+    border-radius: 50%;
+    top: -10px;
+    left: -10px;
+  }
+
+  .circle {
+    background-color: #1f9aca;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 50%;
+  }
+
+  .pointer-container {
+    position: absolute;
+    top: -40px;
+    left: 90px;
+    width: 20px;
+    height: 140px;
+    animation: rotate 7.5s linear forwards infinite;
+    transform-origin: bottom center;
+    /* background-color: red; */
+  }
+
+  @keyframes grow {
+    from {
+      transform: scale(0.8);
+    }
+
+    to {
+      transform: scale(1);
+    }
+  }
+
+  @keyframes shrink {
+    from {
+      transform: scale(1);
+    }
+
+    to {
+      transform: scale(0.8);
+    }
+  }
+}
